--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= ESTEI BSP
+= CHIP BSP
 
 To get the BSP you need to have `repo` installed and use it as:
 
@@ -15,16 +15,6 @@ Download the BSP source:
 $: PATH=${PATH}:~/bin
 $: mkdir chip-bsp
 $: cd chip-bsp
-$: repo init -u https://github.com/texierp/yocto-chip-manifest -b master
+$: repo init -u https://github.com/texierp/yocto-chip-bsp -b master
 $: repo sync
-
-At the end of the commands you have every metadata you need to start work with.
-
-To start a simple image build (C.H.I.P base image):
-
-[source,console]
-$: cd sources 
-$: export TEMPLATECONF="$PWD/meta-estei/conf"
-$: source poky/oe-init-build-env chip-build 
-$: MACHINE=chip bitbake estei-qt-image
 
